Fixed bug with arrows, shift, and also added breakline set. Optimized rendering in react

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
     background-color: white;
     display: inline-block;
     color: white;
-    width: 1px;
+    width: 3px;
     animation: blinkingCursor 0.8s infinite;
 }
 
